alignment issue for mdf module

--- a/src/app/mdf/select-mdf/select-mdf.component.css
+++ b/src/app/mdf/select-mdf/select-mdf.component.css
@@ -123,6 +123,6 @@ h5 {
 .mltp{
     margin-left: 15% !important;
 }
-.mb20{
-    margin-bottom: 20px !important;
+.mb12{
+    margin-bottom: 12px !important;
 }
